Add Editable.erase